--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,12 @@ form{
 form input{
 	border:1px solid #ccc;
 	border-radius:5px;
-	padding:10px 20px;
+	padding:10px;
 }
 button{
 	background-color:#1877f2;
 	border-radius:5px;
-	padding:10px 20px;
+	padding:10px;
 	border:none;
 	color:white;
 }
